<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/account_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="218dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:hint="@string/account_hint"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/password_editText"
        android:singleLine="true"
        android:textColorHint="@color/gray_200"
        android:textSize="16sp"
        android:autofillHints="emailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:hint="@string/password_hint"
        android:autofillHints="password"
        android:nextFocusDown="@id/password_again_editText"
        android:inputType="textPassword"
        android:textColorHint="@color/gray_200"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/password_again_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_editText" />

    <EditText
        android:id="@+id/password_again_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:autofillHints="password"
        android:hint="@string/password_again_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColorHint="@color/gray_200"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_editText" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/gray_300"
        android:text="@string/sign_up_button"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_again_editText" />


</androidx.constraintlayout.widget.ConstraintLayout>