<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/account_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="48dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:hint="@string/account_hint"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/password_editText"
        android:singleLine="true"
        android:textColorHint="@color/gray_200"
        android:textSize="16sp"
        android:autofillHints="emailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:hint="@string/password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColorHint="@color/gray_200"
        android:textSize="16sp"
        android:autofillHints="password"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_editText" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/gray_300"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/before_signup_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_editText" />

    <TextView
        android:id="@+id/before_signup_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/not_yet_signed_up"
        android:textColor="@color/gray_300"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/signup_textView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <TextView
        android:id="@+id/signup_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textColor="@color/gray_300"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/before_signup_textView"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        tools:text="前往註冊" />

    <TextView
        android:id="@+id/or_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/or_text"
        android:textColor="@color/gray_300"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/before_signup_textView"/>

    <TextView
        android:id="@+id/guest_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textColor="@color/gray_300"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or_textView"
        tools:text="以訪客身份進行" />

</androidx.constraintlayout.widget.ConstraintLayout>